[gd_scene load_steps=2 format=3 uid="uid://ccq0pdwwff7jq"]

[ext_resource type="Script" uid="uid://co3fau0c6p1s6" path="res://ui/tower_options_panel.gd" id="1_abcd"]

[node name="TowerOptionsPanel" type="Control"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 200.0
grow_vertical = 2
script = ExtResource("1_abcd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TowerName" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Selected Tower: None"
horizontal_alignment = 1

[node name="UpgradeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Upgrade"

[node name="SellButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Sell"

[connection signal="pressed" from="Panel/VBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SellButton" to="." method="_on_sell_button_pressed"]
